
7.39  2017-08-02

7.38  2017-07-30
  - Added extra attribute to Mojolicious::Static. (jabberwok)
  - Improve Mojo::URL performance significantly.
  - Fixed memory leak in Mojo::URL that was caused by a Perl 5.24 bug.

7.37  2017-07-21
  - Added slugify method to Mojo::ByteStream. (Grinnz)
  - Added slugify function to Mojo::Util. (Grinnz)
  - Fixed bugs in Mojo::IOLoop and Mojo::Reactor::Poll that would prevent a
    reset from clearing events.

7.36  2017-07-09
  - Fixed basename method in Mojo::File to work with relative paths. (jberger)
  - Fixed a bug where Mojo::Log could not correctly identify if it was deployed
    with systemd.
  - Fixed Mojo::HelloWorld to actually be a Mojolicious subclass.

7.35  2017-07-05
  - Removed deprecated watch attribute from Mojo::Server::Morbo.
  - Added spare attribute to Mojo::Server::Prefork.
  - Added -s option to prefork command.
  - Added fd option to Mojo::IOLoop::Server::listen.
  - Added fd parameter to Mojo::Server::Daemon::listen.
  - Added spare setting to Hypnotoad.
  - Increased default graceful_timeout from 20 to 60 seconds and
    heartbeat_timeout from 20 to 30 seconds in Mojo::Server::Prefork.

7.34  2017-07-02
  - Added short attribute to Mojo::Log.
  - Improved Mojo::Log to print log messages without timestamps to STDERR when
    deployed with systemd.
  - Improved Mojo::DOM performance slightly.

7.33  2017-06-05
  - Added EXPERIMENTAL support for :matches pseudo-class and :not pseudo-class
    with compound selectors to Mojo::DOM::CSS.
  - Fixed a few form element value extraction bugs in Mojo::DOM.
  - Fixed version command to use the new MetaCPAN API, since the old one got
    shut down.

7.32  2017-05-28
  - Added -f option to get command.
  - Improved get command with support for passing request data by redirecting
    STDIN.
  - Fixed memory leak in Mojo::IOLoop::Client that sometimes prevented the
    connect timeout from working correctly for TLS handshakes.

7.31  2017-04-23